gcc/testsuite/rust/rustc/ui/parser/nested-missing-closing-angle-bracket.rs
fn main() {
  let v : Vec::<Vec<(u32,_,_)> = vec![vec![]];
// { dg-error "" "" { target *-*-* } .-1 }
}

